Issue #11067: Remove powermock workaround for JDK16